# msc

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_MIGRATION.md  ARCHITECTURE_MIGRATION_FASE0.md  ARCHITECTURE_MIGRATION_FASE1.md  ARCHITECTURE_MIGRATION_FASE2.md  ARCHITECTURE_MIGRATION_FASE3.md  ARCHITECTURE_MIGRATION_FASE4.md  ARCHITECTURE_MIGRATION_FASE5.md  ARCHITECTURE_MIGRATION_FASE6.MD  ARCHITECTURE_MIGRATION_FASE7.md  ARCHITECTURE_MIGRATION_FASE8.md  CURRENT_FN.md  Cargo.toml  LICENSE  NEW_COMMANDS.md  README.md  build.rs  dist-workspace.toml  test_gpu_detection.rs
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml
docs/: ARCHITECTURE.md  AUTO_RELEASE_GUIDE.md  DISTRIBUTION_PLAN.md  ERROR.md  SIGNING_RELEASES.md  SYS_IMPROVEMENTS.md  UPDATE.md  security.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  installation.md  introduction.md  quickstart.md
msc-shim/: Cargo.toml
msc-shim/src/: main.rs
packaging/: POST_RELEASE_STEPS.md  README.md
packaging/aur/: .SRCINFO.template  PKGBUILD
packaging/chocolatey/: README.md
packaging/chocolatey/msc/: msc.nuspec
packaging/chocolatey/msc/tools/: chocolateyinstall.ps1
packaging/homebrew/: msc.rb
packaging/winget/: MSC.installer.yaml  MSC.locale.en-US.yaml  MSC.yaml  Marco.MSC.installer.yaml  Marco.MSC.locale.en-US.yaml  Marco.MSC.yaml
scripts/: generate-completions.ps1  generate-completions.sh  get-productcode.ps1
src/: error.rs  lib.rs  main.rs
src/commands/: alias.rs  clean.rs  clean_temp.rs  completions.rs  config.rs  hello.rs  list.rs  mod.rs  sys.rs  update.rs  vedit.rs  version.rs  vget.rs  wget.rs  workspace.rs
src/commands/sys/: monitor.rs
src/const/: black_list_url
src/core/: alias.rs  alias_generator.rs  alias_validator.rs  blacklist.rs  checksum_manager.rs  cleaner.rs  config.rs  ffmpeg_manager.rs  file_scanner.rs  mod.rs  path_manager.rs  path_validator.rs  validation.rs  wget_manager.rs  workspace.rs  yt_dlp_manager.rs
src/core/system_info/: battery.rs  collector.rs  cpu.rs  gpu.rs  memory.rs  memory_prediction.rs  mod.rs  motherboard.rs  network.rs  os.rs  power.rs  storage.rs  types.rs
src/core/system_monitor/: alerts.rs  collector.rs  disk_enrichment.rs  gpu.rs  history.rs  metrics.rs  mod.rs  process_tree.rs  runtime.rs
src/core/system_monitor/tasks/: battery.rs  cpu_memory.rs  disks.rs  global.rs  gpu.rs  mod.rs  network.rs  temperatures.rs
src/core/update/: install_detector.rs  manager.rs  mod.rs  platform_installer.rs  release_info.rs
src/core/wget/: cdp_cookies.rs  chrome_decrypt.rs  chrome_launcher.rs  chrome_manager.rs  cookie_formats.rs  dpapi.rs  mod.rs  wget_cookies.rs  wget_utils.rs  wgetpostprocessing.rs
src/git/: colors.rs  ignore.rs  mod.rs  status.rs
src/platform/: elevation.rs  fs.rs  mod.rs  nvidia_nvml.rs  system_info_windows.rs  temp_dirs.rs
src/platform/gpu/: amd.rs  mod.rs  nvidia.rs
src/platform/system/: mod.rs
src/platform/system/windows/: battery.rs  core.rs  cpu.rs  gpu.rs  mbo.rs  mod.rs  network.rs  ram.rs  storage.rs
src/ui/: formatters.rs  mod.rs  progress.rs  prompts.rs  system_formatters.rs
src/ui/monitor_tui/: app.rs  event_handler.rs  mod.rs  render.rs  widgets.rs
src/utils/: icons.rs  mod.rs
tests/: integration.rs
tests/integration/: alias_security_test.rs  clean_commands_test.rs  clean_paths_test.rs  cleaner_cancellation_test.rs  commands_test.rs  config_test.rs  ffmpeg_test.rs  fuzzing_security_test.rs  security_audit_test.rs  security_bypass_tests.rs  set_command_test.rs  vget_security_test.rs  wget_test.rs  workspace_test.rs
wix/: main.wxs
