[package]
name = "msc"
version = "0.1.0"
edition = "2021"
authors = ["Marco"]
description = "A custom CLI tool"
license = "MIT"
repository = "https://github.com/marco/msc"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]

[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"
dirs = "6.0"
colored = "3.0"
ignore = "0.4.25"
chrono = { version = "0.4.42", features = ["serde"] }
unicode-width = "0.2.2"
git2 = "0.20.2"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11"
crossterm = "0.29.0"
ctrlc = "3.5.1"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
dialoguer = "0.12.0"
url = "2.5.7"
base64 = "0.22.1"
regex = "1.12.2"
which = "8.0"
zip = "6.0.0"
scraper = "0.24"
pathdiff = "0.2.3"
unicode-normalization = "0.1.25"
sha2 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "consoleapi", "processthreadsapi", "winnt", "securitybaseapi", "handleapi"] }
winreg = "0.55.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
