[package]
name = "msc"
version = "0.1.0"
edition = "2021"
authors = ["Marco"]
description = "A custom CLI tool"
license = "MIT"
repository = "https://github.com/marco/msc"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]

[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"
dirs = "6.0"
colored = "3.0"
ignore = "0.4.25"
chrono = { version = "0.4.42", features = ["serde"] }
unicode-width = "0.2.2"
git2 = "0.20.2"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11"
crossterm = "0.29.0"
ctrlc = "3.5.1"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
dialoguer = "0.12.0"
ratatui = "0.30.0-beta.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
# Human-readable byte formatting
humansize = "2.1.3"
url = "2.5.7"
base64 = "0.22.1"
regex = "1.12.2"
which = "8.0"
zip = "6.0.0"
scraper = "0.24"
pathdiff = "0.2.3"
unicode-normalization = "0.1.25"
sha2 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }
# System information
sysinfo = "0.37.2"
raw-cpuid = "11.6.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
battery = "0.7.8" 

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "consoleapi", "processthreadsapi", "winnt", "securitybaseapi", "handleapi"] }
winreg = "0.55.0"
# WMI for detailed Windows hardware info
wmi = "0.18"
# NVIDIA Management Library (official NVIDIA GPU monitoring)
nvml-wrapper = { version = "0.11", optional = true }
# Windows system APIs
windows-sys = { version = "0.61.2", features = [
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_WiFi",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# AMD ROCm SMI Library (for AMD GPU monitoring on Linux)
rocm_smi_lib = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.23"

[features]
default = ["nvml"]
nvml = ["nvml-wrapper"]
rocm = ["rocm_smi_lib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
