[package]
name = "msc"
version = "0.1.10"
edition = "2021"
authors = ["MSC Contributors"]
description = "Multi-purpose CLI tool for system monitoring, media management, and productivity"
license = "MIT"
repository = "https://github.com/MarcossIC/msc"
homepage = "https://github.com/MarcossIC/msc"
documentation = "https://github.com/MarcossIC/msc/blob/main/README.md"
readme = "README.md"
keywords = ["cli", "system-monitor", "video-downloader", "productivity", "tools"]
categories = ["command-line-utilities", "multimedia", "development-tools"]
exclude = [
    "tests/*",
    "docs/*",
    ".github/*",
    "target/*",
    ".claude/*",
]

[package.metadata.wix]
upgrade-guid = "88A2DB79-2E92-43AD-8555-6679E62311BC"
path-guid = "9D592FD9-6652-4569-8692-E94042AD0A66"
license = false
eula = false

[[bin]]
name = "msc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wincode = "0.2.5"
wincode-derive = "0.2.3"
dirs = "6.0"
colored = "3.0"
ignore = "0.4.25"
chrono = { version = "0.4.42", features = ["serde"] }
unicode-width = "0.2.2"
git2 = "0.20.2"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11"
crossterm = "0.29.0"
ctrlc = "3.5.1"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
dialoguer = "0.12.0"
ratatui = "0.30.0-beta.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
humansize = "2.1.3"
url = "2.5.7"
base64 = "0.22.1"
regex = "1.12.2"
which = "8.0"
zip = "7.0.0"
scraper = "0.25"
pathdiff = "0.2.3"
unicode-normalization = "0.1.25"
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["bundled"] }
aes-gcm = "0.10.3"
tar = "0.4"
flate2 = "1.0"
# System information
sysinfo = "0.37.2"
raw-cpuid = "11.6.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
battery = "0.7.8" 

# NVIDIA Management Library (works on Windows and Linux)
nvml-wrapper = { version = "0.11", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "consoleapi", "processthreadsapi", "winnt", "securitybaseapi", "handleapi"] }
winreg = "0.55.0"
# WMI for detailed Windows hardware info
wmi = "0.18"
# Windows system APIs
windows-sys = { version = "0.61.2", features = [
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_WiFi",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
    "Win32_Foundation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# AMD ROCm SMI Library (for AMD GPU monitoring on Linux)
rocm_smi_lib = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.23"

[features]
default = ["nvml"]
nvml = ["nvml-wrapper"]
rocm = ["rocm_smi_lib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
